--- a/email3.html
+++ b/email3.html
@@ -18,7 +18,7 @@
             </tr>
             <tbody>
                 <tr>
-                    <td colspan="2" style="padding: 24px 40px 88px;">
+                    <td colspan="2" style="padding: 24px 40px 40px;">
                         <h2 style="font-family: sans-serif; font-size: 16px;">
                             <b>
                                 <i>
@@ -27,15 +27,35 @@
                             </b>
                         </h2>
                         <p style="font-family: sans-serif; font-size: 14px; padding-bottom: 24px;">
-                            Recebemos sua solicitação de recuperação de senha, para criar uma nova senha clique no botão abaixo:
+                            Recebemos o seu pedido e agora estamos aguardando a confirmação do pagamento pela operadora. <br><br>
+                            Você pode acompanhar os detalhes do pedido clicando no botão abaixo:
                         </p>
                         <a href="" style="border: 1px solid blue; border-radius: 6px; background-color: blue; color: white; text-decoration: none; font-family: sans-serif; padding: 8px 14px; font-size: 16px; font-weight: bold;">
-                            <i>Cadastrar Nova Senha</i>
+                            <i>Acompanhar Pedido</i>
                         </a>
-                        <p style="font-family: sans-serif; padding-top: 16px; font-size: 14px;">
-                            <span style="opacity: 40%;"><i>O link é valido por 24 horas</i></span><br><br>
-                            <i><b>Importante:</b> caso não tenha feito a solicitação: desconsidere este e-mail.</i>
-                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="padding-left: 40px; padding-bottom: 80px;">
+                        <div>
+                            <p style="font-family: sans-serif; font-size: 16px;">
+                                <b><i>Detalhes do pedido</i></b>
+                            </p>
+                        </div>
+                        <div style="display: inline-block;">
+                                <img src="./img/tênis.png" alt="Produto">
+                        </div>
+                        <div style="display: inline-block;">
+                            <p style="font-family: sans-serif; font-size: 14px; padding-left: 14px;">
+                                <b>Tênis Nike</b> <br>
+                                <b>Tamanho:</b> 40 <br>
+                                <b>Cor:</b> Preta <br>
+                                <b>Quantidade:</b> 1 <br>
+                                <b>Preço:</b> R$ 350,00 em 5 x R$ 70,00 <br>
+                                <b>Frete:</b> grátis <br>
+                                <b>Número do pedido:</b> 9876523453
+                            </p>
+                        </div>
                     </td>
                 </tr>
                 <tfoot>
