--- a/email4.html
+++ b/email4.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" style="padding-left: 40px; padding-right: 40px;">
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -55,7 +55,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -70,7 +70,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -85,7 +85,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -100,7 +100,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -115,7 +115,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -130,7 +130,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
@@ -145,7 +145,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div style="padding-bottom: 24px; display: inline-block; margin-right: 10px">
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
                             <a href="" style="text-decoration: none; color: black;">
                                 <img src="./img/tênis.png" alt="Produto">
                                 <div style="font-family: sans-serif; font-size: 12px;">
