Add product display section to promotional email template

--- a/email4.html
+++ b/email4.html
@@ -160,6 +160,66 @@
                                 </div>
                             </a>
                         </div>
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
+                            <a href="" style="text-decoration: none; color: black;">
+                                <img src="./img/tênis.png" alt="Produto">
+                                <div style="font-family: sans-serif; font-size: 12px;">
+                                    <h3 style="margin: 0">Tênes Nike</h3>
+                                    <span style="color: #C1C1C1; text-decoration:line-through">
+                                        de R$ 350,00
+                                    </span>
+                                    <p style="margin: 0">
+                                        Por R$ 200,00 <br>
+                                        ou 4x R$ 50,00
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
+                            <a href="" style="text-decoration: none; color: black;">
+                                <img src="./img/tênis.png" alt="Produto">
+                                <div style="font-family: sans-serif; font-size: 12px;">
+                                    <h3 style="margin: 0">Tênes Nike</h3>
+                                    <span style="color: #C1C1C1; text-decoration:line-through">
+                                        de R$ 350,00
+                                    </span>
+                                    <p style="margin: 0">
+                                        Por R$ 200,00 <br>
+                                        ou 4x R$ 50,00
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div style="padding-bottom: 24px; display: inline-block; max-width: 127px; width: 100%;">
+                            <a href="" style="text-decoration: none; color: black;">
+                                <img src="./img/tênis.png" alt="Produto">
+                                <div style="font-family: sans-serif; font-size: 12px;">
+                                    <h3 style="margin: 0">Tênes Nike</h3>
+                                    <span style="color: #C1C1C1; text-decoration:line-through">
+                                        de R$ 350,00
+                                    </span>
+                                    <p style="margin: 0">
+                                        Por R$ 200,00 <br>
+                                        ou 4x R$ 50,00
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div style="padding-bottom: 80px; display: inline-block; max-width: 127px; width: 100%;">
+                            <a href="" style="text-decoration: none; color: black;">
+                                <img src="./img/tênis.png" alt="Produto">
+                                <div style="font-family: sans-serif; font-size: 12px;">
+                                    <h3 style="margin: 0">Tênes Nike</h3>
+                                    <span style="color: #C1C1C1; text-decoration:line-through">
+                                        de R$ 350,00
+                                    </span>
+                                    <p style="margin: 0">
+                                        Por R$ 200,00 <br>
+                                        ou 4x R$ 50,00
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
                     </td>
                 </tr>
                 <tfoot>
